# Meteorological-Forecasting-Platform

./: .gitignore  .ruff.toml  README.md  main.py  mkdocs.yml  pyproject.toml
app/: main.py
app/.streamlit/: config.toml
app/assets/: style.css
app/components/: charts.py  loading.py  maps.py  visuals.py
app/pages/: 01_Rainbow_Hunter.py  02_Model_Audit.py  03_Weather_Forecast.py  04_Wind_Chill_Notify_Form.py
app/utils/: data_loader.py
data/processed/: metrics.csv  predicciones_2025.csv
data/raw/: Station_Metadata.json  meteo_mensual_202401.csv  meteo_mensual_202402.csv  meteo_mensual_202403.csv  meteo_mensual_202404.csv  meteo_mensual_202405.csv  meteo_mensual_202406.csv  meteo_mensual_202407.csv  meteo_mensual_202408.csv  meteo_mensual_202409.csv  meteo_mensual_202410.csv  meteo_mensual_202411.csv  meteo_mensual_202412.csv
data/raw/Station_0061X_Pontons/2009/: data_2009.json
data/raw/Station_0061X_Pontons/2010/: data_2010.json
data/raw/Station_0061X_Pontons/2011/: data_2011.json
data/raw/Station_0061X_Pontons/2012/: data_2012.json
data/raw/Station_0061X_Pontons/2013/: data_2013.json
data/raw/Station_0061X_Pontons/2014/: data_2014.json
data/raw/Station_0061X_Pontons/2015/: data_2015.json
data/raw/Station_0061X_Pontons/2016/: data_2016.json
data/raw/Station_0061X_Pontons/2017/: data_2017.json
data/raw/Station_0061X_Pontons/2018/: data_2018.json
data/raw/Station_0061X_Pontons/2019/: data_2019.json
data/raw/Station_0061X_Pontons/2020/: data_2020.json
data/raw/Station_0061X_Pontons/2021/: data_2021.json
data/raw/Station_0061X_Pontons/2022/: data_2022.json
data/raw/Station_0061X_Pontons/2023/: data_2023.json
data/raw/Station_0061X_Pontons/2024/: data_2024.json
data/raw/Station_0061X_Pontons/2025/: data_2025.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2008/: data_2008.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2009/: data_2009.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2010/: data_2010.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2011/: data_2011.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2012/: data_2012.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2013/: data_2013.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2014/: data_2014.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2015/: data_2015.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2016/: data_2016.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2017/: data_2017.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2018/: data_2018.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2019/: data_2019.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2020/: data_2020.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2021/: data_2021.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2022/: data_2022.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2023/: data_2023.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2024/: data_2024.json
data/raw/Station_0066X_Vilafranca_Del_Penedès/2025/: data_2025.json
data/raw/Station_0073X_Sitges/2009/: data_2009.json
data/raw/Station_0073X_Sitges/2010/: data_2010.json
data/raw/Station_0073X_Sitges/2011/: data_2011.json
data/raw/Station_0073X_Sitges/2012/: data_2012.json
data/raw/Station_0073X_Sitges/2013/: data_2013.json
data/raw/Station_0073X_Sitges/2014/: data_2014.json
data/raw/Station_0073X_Sitges/2015/: data_2015.json
data/raw/Station_0073X_Sitges/2016/: data_2016.json
data/raw/Station_0073X_Sitges/2017/: data_2017.json
data/raw/Station_0073X_Sitges/2018/: data_2018.json
data/raw/Station_0073X_Sitges/2019/: data_2019.json
data/raw/Station_0073X_Sitges/2020/: data_2020.json
data/raw/Station_0073X_Sitges/2021/: data_2021.json
data/raw/Station_0073X_Sitges/2022/: data_2022.json
data/raw/Station_0073X_Sitges/2023/: data_2023.json
data/raw/Station_0073X_Sitges/2024/: data_2024.json
data/raw/Station_0073X_Sitges/2025/: data_2025.json
data/raw/Station_0076_Barcelona_Aeropuerto/1950/: data_1950.json
data/raw/Station_0076_Barcelona_Aeropuerto/1951/: data_1951.json
data/raw/Station_0076_Barcelona_Aeropuerto/1952/: data_1952.json
data/raw/Station_0076_Barcelona_Aeropuerto/1953/: data_1953.json
data/raw/Station_0076_Barcelona_Aeropuerto/1954/: data_1954.json
data/raw/Station_0076_Barcelona_Aeropuerto/1955/: data_1955.json
data/raw/Station_0076_Barcelona_Aeropuerto/1956/: data_1956.json
data/raw/Station_0076_Barcelona_Aeropuerto/1957/: data_1957.json
data/raw/Station_0076_Barcelona_Aeropuerto/1958/: data_1958.json
data/raw/Station_0076_Barcelona_Aeropuerto/1959/: data_1959.json
data/raw/Station_0092X_Berga/2009/: data_2009.json
data/telegram/: telegram_subscriptions.json
data/telegram_id/: telegram_subscriptions.json
docs/: CONTRIBUTING.md  app_structure.md  architecture.md  index.md  logic.md  pipelines.md  results.md
models/: model_rain.pkl
pipelines/: 01_ingest_data.py  02_process_data.py  03_train_model.py  04_onestep_forecast.py  05_recursive_forecast.py  06_comparative_report.py  07_model_analysis.py
pipelines/actions/: telegram.py
proyecto3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: correlations.py  predict_future.py  train_model.py
src/config/: settings.py
src/core/: api_client.py  data_pipeline.py  ingestion.py
src/etl/: ingestion.py  processing.py
src/etl/clients/: aemet.py  openmeteo.py
src/features/: physics.py  transformation.py
src/modeling/: base.py  rainbow.py  wind_chill.py
src/modeling/trainers/: atmosphere.py  rain.py  temperature.py
src/schemas/: weather.py
src/utils/: cleaner.py  data_visualizers.py  date_helper.py  enums.py  logger.py  resilience.py
tests/config/: test_settings.py
tests/etl/: test_aemet.py  test_clients.py  test_ingestion.py  test_processing.py
tests/features/: test_physics.py  test_transformation.py
tests/modeling/: test_rainbow.py  test_trainers.py  test_wind_chill.py
tests/schemas/: test_weather.py
tests/utils/: test_cleaner.py  test_resilience.py
utils/: data_aggregator.py  data_analysis.py  data_loaders.py
(+647 files in other folders)
