[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipelines*", "app*"]

[project]
name = "rainbow-ai-predictor"
description = "ML System to predict rainbow probabilities using AEMET & OpenMeteo meteorological data."
version = "1.0.0"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nadeem", email = "alu2019213@365.stucom.com" },
    { name = "Albert", email = "pl2025135@365.stucom.com" },
    { name = "Joan Albert", email = "pl2023357@365.stucom.com" },
]

maintainers = [
    { name = "Nadeem", email = "alu2019213@365.stucom.com" },
    { name = "Albert", email = "pl2025135@365.stucom.com" },
    { name = "Joan Albert", email = "pl2023357@365.stucom.com" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas>=2.3.3",
    "python-dotenv",
    "requests>=2.32.5",
    "openmeteo-requests>=1.7.4",
    "retry-requests>=2.0.0",
    "requests-cache>=1.2.1",
    "joblib>=1.3.2",
    "lightgbm>=4.6.0",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "gitpython",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "optuna>=4.6.0",
    "optuna-integration",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.5.3",
    "mypy<2.0.0,>=1.4.1",
    "pytest<9.0.0,>=8.3.4",
    "pytest-cov",
    "pre-commit",
    "ipython",
    "notebook",
]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "6.2"
addopts = "-vvv -s --cov=src --cov-report term-missing --cov-report xml:coverage.xml"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
files = ["**/*.py"]
ignore_missing_imports = true

[tool.ruff]
exclude = [".git", ".venv", "build", "dist", "node_modules", "__init__.py"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "D", "E", "F", "I", "N", "PD", "TID", "UP"]
ignore = ["D100", "D104", "D107", "D205", "D212", "D401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "pipelines", "app", "tests"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]
